workshop04/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns
  labels:
    name: minio-ns
    app: minio
